system-ui (0.18.17~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Dec 2010 14:20:32 +0200

system-ui (0.18.16-1) unstable; urgency=low

  * Fixes: NB#202981 - Volume level can not be adjusted by dragging the volume slider
  * Fixes: NB#208655 - No haptic feedback is received when connecting USB charger to DUT
  * Fixes: NB#188933 - Device shows Offline icon shortly after bootup
  * Fixes: NB#209114 - "!! And more" text needs to be localized in the lock screen view
  * Fixes: NB#204770 - Pressing power key several times in a row unlocks the device

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Dec 2010 14:19:23 +0200

system-ui (0.18.15-1) unstable; urgency=low

  * Fixes: NB#205825 - Volume indicator is not displayed in call view when adjustingvolume via HW key.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 30 Nov 2010 16:50:55 +0200

system-ui (0.18.14-1) unstable; urgency=low

  * Fixes: NB#208431 - shutdown screen d-bus api doesn't let to update the shutdown-screen texts

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 30 Nov 2010 13:37:34 +0200

system-ui (0.18.13-1) unstable; urgency=low

  * Fixes: NB#200579 - Device does not read EF-MWIS file upon powering ON
  * Fixes: NB#204770 - Pressing power key several times in a row unlocks the device
  * Fixes: NB#203329 - Short event banner should be disabled when the Devicelock is active on device
  * Fixes: NB#205077 - Need handling of error messages coming from usb_moded
  * Implemented: SWP#DUI-4027 Time stamp on notifications

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 29 Nov 2010 13:29:56 +0200

system-ui (0.18.12-1) unstable; urgency=low

  * Fixes: NB#205958 - Banner stays no more than 3 seconds
  * Fixes: NB#201241 - Percentage to bars not correctly shown in status area Battery icon
  * Implemented: SWP#DUI-4036 - Opening status menu

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Nov 2010 14:20:24 +0200
