@@ -1,6 +1,7 @@
 system-ui (0.18.17~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#210081 - Timestamp is displayed for short event banners (messaging)
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Dec 2010 14:20:32 +0200
 
